feat: update footer

--- a/index.html
+++ b/index.html
@@ -207,6 +207,7 @@ makeNegative()
     </div>
   </main>
   <footer class="footer">
+    <div class="container footer-container">
     <a class="footer__github footer__item" href="https://github.com/Lanecka" target="_blank">
       <img src="./img/icons/githubWhite.png" alt="icon of github">
       <h3>my GitHub</h3>
@@ -215,6 +216,7 @@ makeNegative()
     <a class="footer__school footer__item" href="https://rs.school/js/" target="_blank">
       <img src="./img/icons/rsschool.png" alt="logo rsschool">
     </a>
+  </div>
   </footer>
 </body>
 </html>
