feat: update section projects

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Irina Veselova</title>
   <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
   <header class="header">
     <div class="header__container">
@@ -189,6 +191,20 @@ makeNegative()
           <section class="section" id="projects">
             <h2 class="section__title section__title--yellow">Projects</h2>
             <ul class="projects">
+              <li>
+                <a class="projects__item" href="https://lanecka.github.io/rsschool-cv/cv" target="_blank">
+                  <img class="projects__img" src="./img/projects/screen1.png" alt="my cv page">
+                  <div class="projects__description">
+                    <h3>my cv-markdown</h3>
+                </a>
+              </li>
+              <li>
+                <a class="projects__item" href="https://lanecka.github.io/rsschool-cv/" target="_blank">
+                  <img class="projects__img" src="./img/projects/screen3.png" alt="my cv page">
+                  <div class="projects__description">
+                    <h3>my cv-page</h3>
+                </a>
+              </li>
               <li>
                 <a class="projects__item" href="https://alestemple.vercel.app/" target="_blank">
                   <img class="projects__img" src="./img/projects/alestemple.png" alt="alestemple">
