feat: update links for projects

--- a/index.html
+++ b/index.html
@@ -194,8 +194,10 @@ makeNegative()
               <li>
                 <a class="projects__item" href="https://lanecka.github.io/rsschool-cv/cv" target="_blank">
                   <img class="projects__img" src="./img/projects/screen1.png" alt="my cv page">
+
                   <div class="projects__description">
                     <h3>my cv-markdown</h3>
+                  </div>
                 </a>
               </li>
               <li>
@@ -203,6 +205,7 @@ makeNegative()
                   <img class="projects__img" src="./img/projects/screen3.png" alt="my cv page">
                   <div class="projects__description">
                     <h3>my cv-page</h3>
+                  </div>
                 </a>
               </li>
               <li>
